# Ember-old

./: .gitignore  CMakeLists.txt  GraphicsPlayground.sln  LICENSE  README.md  editor.ini  generate_project.py  imgui.ini
Data/editor_themes/: ember.json
Data/images/: CREDITS.txt
Editor/: Editor.cpp  Editor.h  editor_pch.cpp  editor_pch.h  main.cpp
Editor/imgui/: imgui_impl_glfw.cpp
Editor/imgui/ImGuizmo/: ImGuizmo.cpp
Editor/tabs/: Console.cpp  Console.h  EditorTab.cpp  EditorTab.h  Hierarchy.cpp  Hierarchy.h  Inspector.cpp  Inspector.h  MainMenuBar.cpp  MainMenuBar.h  Viewport.cpp  Viewport.h
Editor/themes/: EditorTheme.cpp  EditorTheme.h  EditorThemeLoader.cpp  EditorThemeLoader.h
Engine/: Application.cpp  Definitions.h  Engine.cpp  Engine.h  engine_pch.cpp  engine_pch.h
Engine/core/: ApplicationWindow.cpp  ApplicationWindow.h  Camera.cpp  Camera.h  Component.cpp  Component.h  DirectionalLight.cpp  DirectionalLight.h  FrameBuffer.cpp  FrameBuffer.h  Framebuffer.cpp  Framebuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  PointLight.cpp  RenderBuffer.cpp  RenderBuffer.h  Renderbuffer.cpp  Renderbuffer.h  Renderer.cpp  Renderer.h  RendererTypes.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  SpotLight.cpp  SpotLight.h  Texture.cpp  Texture.h  TextureTypes.h  Time.cpp  (+9 more)
Engine/core/components/: Camera.cpp  Camera.h  Component.cpp  Component.h  Light.cpp  Light.h  LightTypes.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Transform.cpp  Transform.h
Engine/core/components/light/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  SpotLight.cpp
Engine/core/components/lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
Engine/core/components/mesh/: Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
Engine/core/components/meshes/: Cube.cpp  Cube.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Quad.cpp  Quad.h  Sphere.cpp  Sphere.h
Engine/core/materials/: Material.cpp  Material.h  MaterialBlinnPhong.cpp  MaterialBlinnPhong.h  MaterialEditorGrid.cpp  MaterialEditorGrid.h  MaterialSkybox.cpp  MaterialSkybox.h  MaterialUnlit.cpp  MaterialUnlit.h
Engine/core/objects/: Camera.cpp  Camera.h  EditorGrid.cpp  EditorGrid.h  Object.cpp  Object.h  Skybox.cpp  Skybox.h
Engine/core/objects/light/: DirectionalLight.cpp  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
Engine/core/textures/: Texture.cpp  Texture.h  TextureCubemap.cpp  TextureCubemap.h  TextureDiffuse.cpp  TextureDiffuse.h
Engine/input/: Input.cpp  Input.h  KeyCodes.h  Mouse.h  MouseCodes.h
Engine/logger/: Logger.cpp  Logger.h  LoggerTypes.h
Engine/math/: Math.cpp  Math.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector2D.cpp  Vector2D.h  Vector3.cpp  Vector3.h  Vector3D.cpp  Vector3D.h
Engine/math/matrix/: Matrix4x4.cpp  Matrix4x4.h
Engine/math/quaternion/: Quaternion.cpp  Quaternion.h
Engine/math/vector/: Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Engine/screen/: Screen.cpp  Screen.h  ScreenTypes.h
Engine/shaders/: fragmentBasic.shader  fragmentBlinnPhong.glsl  fragmentEditorGrid.glsl  fragmentFilteredEnvMap.glsl  fragmentHDRI.glsl  fragmentIntegrationBRDF.glsl  fragmentIrradianceMap.glsl  fragmentPBR.glsl  fragmentPhong.glsl  fragmentPhong.shader  fragmentSkybox.glsl  fragmentUnlit.glsl  lighting.glsl  vertexBasic.glsl  vertexEditorGrid.glsl  vertexHDRI.glsl  vertexPhong.glsl  vertexPhong.shader  vertexScreen.glsl  vertexSkybox.glsl  vertexStandard.glsl  vertexUnlit.glsl
Engine/shaders/includes/: BlinnPhong.glsl  PBR.glsl  common.glsl  lighting.glsl
Engine/src/core/: DirectionalLight.cpp  Light.cpp
Engine/src/shaders/: vertexBasic.shader
Engine/utils/: Mesh.cpp  Mesh.h  ObjectPrimitive.cpp  ObjectPrimitive.h  PathBuilder.cpp  PathBuilder.h  Plane.cpp  Plane.h  ProceduralMesh.cpp  ProceduralMesh.h  Sphere.cpp  Sphere.h  Types.h
Engine/utils/primitives/: EditorGrid.cpp  EditorGrid.h  ObjectCube.cpp  ObjectCube.h  ObjectPlane.cpp  ObjectPlane.h  ObjectSphere.cpp  ObjectSphere.h  Skybox.cpp  Skybox.h
Engine/utils/procedural/: Cube.cpp  Cube.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
Engine/window/: Window.cpp  Window.h
OpenGLApplication/: OpenGLApplication.sln
OpenGLApplication/Engine/: Engine.vcxproj
OpenGLApplication/Engine/src/core/: ApplicationWindow.cpp  PointLight.h  Shader.cpp  Transform.h
OpenGLApplication/Engine/src/utils/: Sphere.h
OpenGLApplication/OpenGLApplication/: OpenGLApplication.vcxproj  OpenGLApplication.vcxproj.filters
OpenGLApplication/OpenGLApplication/src/: Application.cpp
OpenGLApplication/OpenGLApplication/src/core/: ApplicationWindow.cpp  ApplicationWindow.h  Camera.cpp  Camera.h  DirectionalLight.cpp  Light.cpp  Light.h  Mesh.cpp  Mesh.h  PointLight.cpp  Shader.cpp  Shader.h  SpotLight.cpp  SpotLight.h  Transform.cpp  Transform.h  glad.c
OpenGLApplication/OpenGLApplication/src/shaders/: fragmentPhong.shader  vertexPhong.shader
OpenGLApplication/OpenGLApplication/src/utils/: Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Types.h
Scripts/: premake.lua
